controller/src/snapshots/controller__project_source__test__can_extract_projects_from_public_git_repository.snap
---
source: controller/src/project_source.rs
expression: "&projects"
---
- projectid: echo
  tasks:
    - name: echo
      runcommand: python echo.py myoutput
      projectid: echo
      source: {}
      resources:
        cpu: "2"
        memory: 4Gi

