controller/src/snapshots/controller__project_source__test__can_get_extract_projects_from_public_git_repository.snap
---
source: controller/src/project_source.rs
expression: "&projects"
---
- projectid: echo
  tasks:
    - runcommand: python echo.py myoutput
      projectid: echo
      env: ~
      image: ~
      secrets: ~
      pipeline: ~
      source:
        gitrepository: ~
        gitreference: ~
        amestoragepath: ~
      resources:
        cpu: "2"
        memory: 4Gi

